--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WDD130 | Otu Maduabuchi Okah</title>
   <link rel="stylesheet" href="styles/styles.css">
-
+  <meta name="description"
+    content="Otu Maduabuchi Okah's WDD 130 home page for Web Fundamentals at BYU-Idaho. Learn about me, my course progress, and web development projects.">
+  <meta name="author" content="Otu Maduabuchi Okah">
 
   <!-- Google Fonts for headings and text -->
   <link rel="preconnect" href="https://fonts.google.com/specimen/Lato">
@@ -40,30 +42,30 @@
       technology, creativity, and learning new skills that help me solve problems and build meaningful websites. I look
       forward to growing through this course!
     </p>
-
-    <aside class="box">
-      <img src="images/profile2.jpg" alt="Nigeria Temple" />
-      <h2 class="overlay-heading">Nigeria</h2>
-      <p>the Aba Nigeria Temple was announced on Apirl 2, 2000, by president Gordon B. Hinckley,the 15th president of
-        the church of jesus christ of latter day saint and many local latter-day saints who attended the open house of
-        the Aba Nigeria Tempel from june 18 to july 2, 2005, were seen with tears of in their eyes.</p>
-    </aside>
-
-    <ul class="box">
-      <li>
-        <a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria
-          Temple</a>
-      </li>
-      <li>
-        <a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra Ghana
-          Temple</a>
-      </li>
-      <li>
-        <a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake
-          Temple</a>
-      </li>
-    </ul>
   </main>
+  <aside class="box">
+    <img src="images/profile2.jpg" alt="Nigeria Temple" />
+    <h2 class="overlay-heading">Nigeria</h2>
+    <p>the Aba Nigeria Temple was announced on Apirl 2, 2000, by president Gordon B. Hinckley,the 15th president of
+      the church of jesus christ of latter day saint and many local latter-day saints who attended the open house of
+      the Aba Nigeria Tempel from june 18 to july 2, 2005, were seen with tears of in their eyes.</p>
+  </aside>
+
+  <ul class="box">
+    <li>
+      <a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria
+        Temple</a>
+    </li>
+    <li>
+      <a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra Ghana
+        Temple</a>
+    </li>
+    <li>
+      <a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake
+        Temple</a>
+    </li>
+  </ul>
+
 
   <footer>
     <p>&copy; 2025 Otu Maduabuchi Okah | Nigeria</p>
